Adjusted heigh of ImageCard to fix layout issue

--- a/maverick/src/components/ImageCard/ImageCard.css
+++ b/maverick/src/components/ImageCard/ImageCard.css
@@ -3,7 +3,7 @@
   border-radius: 8px;
   padding: 20px;
   width: 300px;
-  height: 275px;
+  height: 295px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   background-color: white;
   margin: 10px;
